# Vendor-Compliance-Agent

./: .gitignore  README.md  plan.md  pyproject.toml
docs/: acme_corp_contract.txt  compliance_requirements.txt  escalation_policy.txt  sla_policy.txt  techvendor_contract.txt
src/: agent.py  main.py  rag.py  tools.py
