[project]
name = "vendor-compliance-agent"
version = "0.1.0"
description = "Fully-local AI agent for vendor contract management, SLA monitoring, and compliance tracking."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-ollama>=1.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0,<1.3.0",
    "langgraph-prebuilt>=1.1.0,<1.2.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "chromadb>=1.5.9",
    "pydantic>=2.13.4",
]

[tool.uv]
package = false
